apps/admin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: admin
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
